# ks

./: .gitignore  .pdm.toml  cnn_network.txt  copy_real_data.py  ks.py  ks0.sh  ks1.sh  network.txt  prepare_synth.py  pyproject.toml  run.sh  run_asr.sh  run_ks.sh  run_oracle.sh
