[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Christoph Minixhofer", email = "christoph.minixhofer@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "transformers>=4.18.0",
    "rich>=12.2.0",
    "pandas>=1.4.2",
    "wandb>=0.12.14",
    "setuptools>=62.1.0",
    "coolname>=1.1.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
